@@ -11,6 +11,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import org.junit.jupiter.api.Test;
@@ -276,34 +277,30 @@ public class ParserUtilTest {
 
     @Test
     public void parsePublicAddresses_validInputs_returnsMap() throws Exception {
-        Collection<String> inputs = Arrays.asList(
-            VALID_NETWORK + ">" + VALID_BTC_ADDRESS_1,
-            VALID_NETWORK + ">" + VALID_BTC_ADDRESS_2
-        );
+        Collection<String> inputs = List.of(VALID_NETWORK + ">" + VALID_BTC_ADDRESS_1);
 
-        PublicAddressesComposition expected = new PublicAddressesComposition();
-        Set<PublicAddress> btcAddresses = new HashSet<>();
-        btcAddresses.add(new BtcAddress(VALID_BTC_ADDRESS_1, PublicAddress.DEFAULT_LABEL));
-        btcAddresses.add(new BtcAddress(VALID_BTC_ADDRESS_2, PublicAddress.DEFAULT_LABEL));
-        expected.addPublicAddressesToNetwork(Network.BTC, btcAddresses);
+        PublicAddressesComposition expected = new PublicAddressesComposition(
+                Map.of(Network.BTC, Set.of(new BtcAddress(VALID_BTC_ADDRESS_1, PublicAddress.DEFAULT_LABEL))));
 
         assertEquals(expected, ParserUtil.parsePublicAddresses(inputs));
     }
 
     @Test
     public void parsePublicAddresses_validInputsWithWhitespace_returnsMap() throws Exception {
-        Collection<String> inputs = Arrays.asList(
-            " " + VALID_NETWORK + " > " + VALID_BTC_ADDRESS_1 + " ",
-            " " + VALID_NETWORK + " > " + VALID_BTC_ADDRESS_2 + " "
-        );
+        Collection<String> inputs = Arrays.asList(" " + VALID_NETWORK + " > " + VALID_BTC_ADDRESS_1 + " ");
 
-        PublicAddressesComposition expected = new PublicAddressesComposition();
-        Set<PublicAddress> btcAddresses = new HashSet<>();
-        btcAddresses.add(new BtcAddress(VALID_BTC_ADDRESS_1, PublicAddress.DEFAULT_LABEL));
-        btcAddresses.add(new BtcAddress(VALID_BTC_ADDRESS_2, PublicAddress.DEFAULT_LABEL));
-        expected.addPublicAddressesToNetwork(Network.BTC, btcAddresses);
+        PublicAddressesComposition expected = new PublicAddressesComposition(
+                Map.of(Network.BTC, Set.of(new BtcAddress(VALID_BTC_ADDRESS_1, PublicAddress.DEFAULT_LABEL))));
 
         assertEquals(expected, ParserUtil.parsePublicAddresses(inputs));
+    }
+
+    @Test
+    public void parsePublicAddresses_invalidDuplicateLabels_throwsIllegalArgumentException() throws Exception {
+        Collection<String> inputs = List.of(VALID_NETWORK + ">" + VALID_BTC_ADDRESS_1,
+                VALID_NETWORK + ">" + VALID_BTC_ADDRESS_2);
+
+        assertThrows(IllegalArgumentException.class, () -> ParserUtil.parsePublicAddresses(inputs));
     }
 
     @Test
